webkit prefix added to hidden class for correct blur on Safari

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
   z-index: 5;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
 }
 
 html {
